--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "3d-tiles-renderer": "^0.4.17",
     "@radix-ui/react-slot": "^1.2.2",
     "@react-spring/three": "^9.7.5",
     "@react-three/drei": "^10.0.7",
